--- a/src/components/news/news.scss
+++ b/src/components/news/news.scss
@@ -142,19 +142,15 @@ $news-slide: transform $duration $news-easing;
     right: 0;
     bottom: 0;
     height: 100%;
-    transform: translateX(-100%);
+    @include animatedSlide($news-easing, $duration);
+
     @media(max-width: $breakpoint-tablet) {
         display: none;
         transform: translateY(-100%);
         background-image: none;
         background-color: $bckg;
-    }
-    
+    }   
     &_current {
-        z-index: $top-layout / 2;
-        animation: slideBack $duration $news-easing;
-        transform: translateX(0);
-        
         @media(max-width: $breakpoint-tablet) {
             display: grid;
             grid-template-rows: repeat(2, minmax(0, 1fr));
